Saving and pausing for now

--- a/webscraping.ipynb
+++ b/webscraping.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
     "# All needed libraries\n",
     "import requests\n",
     "from bs4 import BeautifulSoup as bs\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -607,11 +608,11 @@
        " {'title': '176.\\n      The Venture Bros.\\n(2003)',\n",
        "  'release_date': '(2003)',\n",
        "  'rating': '8.5'},\n",
-       " {'title': '177.\\n      El Chavo del Ocho\\n(1972)',\n",
-       "  'release_date': '(1972)',\n",
-       "  'rating': '8.5'},\n",
-       " {'title': '178.\\n      Spaced\\n(1999)',\n",
+       " {'title': '177.\\n      Spaced\\n(1999)',\n",
        "  'release_date': '(1999)',\n",
+       "  'rating': '8.5'},\n",
+       " {'title': '178.\\n      El Chavo del Ocho\\n(1972)',\n",
+       "  'release_date': '(1972)',\n",
        "  'rating': '8.5'},\n",
        " {'title': '179.\\n      Battlestar Galactica\\n(2003)',\n",
        "  'release_date': '(2003)',\n",
@@ -712,10 +713,10 @@
        " {'title': '211.\\n      Extraordinary Attorney Woo\\n(2022)',\n",
        "  'release_date': '(2022)',\n",
        "  'rating': '8.5'},\n",
-       " {'title': '212.\\n      Silicon Valley\\n(2014)',\n",
+       " {'title': '212.\\n      Detectorists\\n(2014)',\n",
        "  'release_date': '(2014)',\n",
        "  'rating': '8.5'},\n",
-       " {'title': '213.\\n      Detectorists\\n(2014)',\n",
+       " {'title': '213.\\n      Silicon Valley\\n(2014)',\n",
        "  'release_date': '(2014)',\n",
        "  'rating': '8.5'},\n",
        " {'title': '214.\\n      Trailer Park Boys\\n(2001)',\n",
@@ -831,7 +832,7 @@
        "  'rating': '8.4'}]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1176,7 @@
        "  'rating': '4.0'}]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1274,7 @@
        "  'weeks': '5'}]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1646,11 +1647,11 @@
        " {'title': '111.\\n      Up\\n(2009)',\n",
        "  'release_date': '(2009)',\n",
        "  'rating': '8.2'},\n",
-       " {'title': '112.\\n      Heat\\n(1995)',\n",
-       "  'release_date': '(1995)',\n",
-       "  'rating': '8.2'},\n",
-       " {'title': '113.\\n      Incendies\\n(2010)',\n",
+       " {'title': '112.\\n      Incendies\\n(2010)',\n",
        "  'release_date': '(2010)',\n",
+       "  'rating': '8.2'},\n",
+       " {'title': '113.\\n      Heat\\n(1995)',\n",
+       "  'release_date': '(1995)',\n",
        "  'rating': '8.2'},\n",
        " {'title': '114.\\n      Taxi Driver\\n(1976)',\n",
        "  'release_date': '(1976)',\n",
@@ -1688,11 +1689,11 @@
        " {'title': '125.\\n      For a Few Dollars More\\n(1965)',\n",
        "  'release_date': '(1965)',\n",
        "  'rating': '8.2'},\n",
-       " {'title': '126.\\n      Batman Begins\\n(2005)',\n",
-       "  'release_date': '(2005)',\n",
-       "  'rating': '8.2'},\n",
-       " {'title': '127.\\n      Dangal\\n(2016)',\n",
+       " {'title': '126.\\n      Dangal\\n(2016)',\n",
        "  'release_date': '(2016)',\n",
+       "  'rating': '8.2'},\n",
+       " {'title': '127.\\n      Batman Begins\\n(2005)',\n",
+       "  'release_date': '(2005)',\n",
        "  'rating': '8.2'},\n",
        " {'title': '128.\\n      The Kid\\n(1921)',\n",
        "  'release_date': '(1921)',\n",
@@ -2065,7 +2066,7 @@
        "  'rating': '8.0'}]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2076,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2092,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2356,7 @@
        "  'rating': '9.3'},\n",
        " {'title': 'The Fabelmans\\n(2022)\\n83\\n(\\n\\n132)',\n",
        "  'release_date': '(2022)',\n",
-       "  'rating': '8.4'},\n",
+       "  'rating': '8.3'},\n",
        " {'title': \"Trick 'r Treat\\n(2007)\\n84\\n(\\n\\n13)\",\n",
        "  'release_date': '(2007)',\n",
        "  'rating': '6.7'},\n",
@@ -2409,7 +2410,7 @@
        "  'rating': '7.2'}]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2420,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2436,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2470,71 +2471,71 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Black Adam</td>\n",
-       "      <td>18.3</td>\n",
-       "      <td>18.3</td>\n",
+       "      <td>$18.3M</td>\n",
+       "      <td>$137.1M</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Ticket to Paradise</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>8.5</td>\n",
+       "      <td>$8.5M</td>\n",
+       "      <td>$46.8M</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>One Piece Film: Red</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>7.6</td>\n",
+       "      <td>$7.6M</td>\n",
+       "      <td>$7.6M</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Smile</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>$4.0M</td>\n",
+       "      <td>$99.1M</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Prey for the Devil</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>3.9</td>\n",
+       "      <td>$3.9M</td>\n",
+       "      <td>$13.7M</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Lyle, Lyle, Crocodile</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>3.4</td>\n",
+       "      <td>$3.4M</td>\n",
+       "      <td>$36.6M</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>The Banshees of Inisherin</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>2.1</td>\n",
+       "      <td>$2.1M</td>\n",
+       "      <td>$3.1M</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Till</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>1.9</td>\n",
+       "      <td>$1.9M</td>\n",
+       "      <td>$6.6M</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Halloween Ends</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1.4</td>\n",
+       "      <td>$1.4M</td>\n",
+       "      <td>$63.5M</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Terrifier 2</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>1.1</td>\n",
+       "      <td>$1.1M</td>\n",
+       "      <td>$9.8M</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2542,20 +2543,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                       title weekend_sales gross weeks\n",
-       "0                 Black Adam          18.3  18.3     3\n",
-       "1         Ticket to Paradise           8.5   8.5     3\n",
-       "2        One Piece Film: Red           7.6   7.6     1\n",
-       "3                      Smile           4.0   4.0     6\n",
-       "4         Prey for the Devil           3.9   3.9     2\n",
-       "5      Lyle, Lyle, Crocodile           3.4   3.4     5\n",
-       "6  The Banshees of Inisherin           2.1   2.1     3\n",
-       "7                       Till           1.9   1.9     4\n",
-       "8             Halloween Ends           1.4   1.4     4\n",
-       "9                Terrifier 2           1.1   1.1     5"
+       "                       title weekend_sales    gross weeks\n",
+       "0                 Black Adam        $18.3M  $137.1M     3\n",
+       "1         Ticket to Paradise         $8.5M   $46.8M     3\n",
+       "2        One Piece Film: Red         $7.6M    $7.6M     1\n",
+       "3                      Smile         $4.0M   $99.1M     6\n",
+       "4         Prey for the Devil         $3.9M   $13.7M     2\n",
+       "5      Lyle, Lyle, Crocodile         $3.4M   $36.6M     5\n",
+       "6  The Banshees of Inisherin         $2.1M    $3.1M     3\n",
+       "7                       Till         $1.9M    $6.6M     4\n",
+       "8             Halloween Ends         $1.4M   $63.5M     4\n",
+       "9                Terrifier 2         $1.1M    $9.8M     5"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2566,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -2685,7 +2686,7 @@
        "9                Terrifier 2           1.1   1.1     5"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2703,7 +2704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2822,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2832,7 +2833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2850,7 +2851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +2969,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2981,7 +2982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -3099,7 +3100,7 @@
        "[250 rows x 3 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3112,7 +3113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -3230,7 +3231,7 @@
        "[250 rows x 3 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3243,7 +3244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -3361,7 +3362,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3370,6 +3371,13 @@
     "# Clean the bottom 100 movies\n",
     "remove_bad_chars(bottom_100_movies_df)\n",
     "bottom_100_movies_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All Data is now clean and ready for analysis"
    ]
   }
  ],
